--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -6,3 +6,6 @@ $color-hov: #79d0eb
 $color-bg2: #F3F3F3
 $color-discont: #E62D2D
 $color-up: #6EBBD3
+$color-bg-footer: #1F2021
+$lolor-btn-form:  #6EBBD3
+
