--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -18,18 +18,24 @@
         line-height: 91.2%
         padding-bottom: 92px
         +reg
-        width: 50%
+        // width: 40%
 
 .bl-2
+    // widows: 60%
 
 
 .button
-    padding: 22px 75px 26px
+    padding: 20px 75px
     margin-right: 80px
     margin-top: 91px
     margin-left: 12px
     border-radius: 10px
     background-color: $lolor-btn-form
-
+    color: $color-text
+.checkbox
+    margin-top: 24px
+.email
+    padding: 20px 30px 
+    border-radius: 10px   
 
 
