--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -91,20 +91,20 @@
         color: $color
         
 
-.up-up
-    position: relative       
-    top: 22px
-    left: 21px
-    text-align: center
 
 .up
-    // display: flex
-    // justify-content: center
-    // align-items: center
     float: right    
-    width: 60px
-    height: 60px
-    background-color: $color-up   
+    background-color: $color-up  
+.up-up
+    position: relative
+    top: 22px
+    left: 21px
+    max-width: 60px
+    max-height: 60px
+
+
+.svg
+        
 
 
 
