--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -92,25 +92,13 @@
         
 
 
-.up
+#scrollTop
     float: right    
     background-color: $color-up  
+    cursor: pointer
 .up-up
     position: relative
     top: 22px
     left: 21px
     max-width: 60px
     max-height: 60px
-
-
-.svg
-        
-
-
-
-
-
-
-
-
-
