--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -19,10 +19,6 @@
         line-height: 91.2%
         padding-bottom: 92px
         +reg
-        // width: 40%
-
-.bl-2
-    // widows: 60%
 
 
 .button
@@ -33,10 +29,12 @@
     border-radius: 10px
     background-color: $lolor-btn-form
     color: $color-text
-.checkbox
-    margin-top: 24px
 .email
     padding: 20px 30px 
     border-radius: 10px   
+
+.check
+    margin-top: 24px
+
 
 
