--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -34,7 +34,50 @@
     border-radius: 10px   
 
 .check
-    margin-top: 24px
+    margin-top: 24px 
 
+.checkbox 
+	position: absolute
+	z-index: -1
+	opacity: 0
+	margin: 10px 0 0 15px
+
+.checkbox + label 
+	position: relative
+	padding: 0 0 0 60px
+	cursor: pointer
+
+.checkbox + label:before 
+	content: ''
+	position: absolute
+	top: -4px
+	left: 0
+	width: 40px
+	height: 22px  // 26px
+	border-radius: 13px
+	background: #CDD1DA
+	box-shadow: inset 0 2px 3px rgba(0,0,0,.2)
+	transition: .2s
+
+.checkbox + label:after 
+	content: ''
+	position: absolute
+	top: -2px
+	left: 2px
+	width: 22px
+	height: 18px
+	border-radius: 10px
+	background: #FFF
+	box-shadow: 0 2px 5px rgba(0,0,0,.3)
+	transition: .2s
+
+.checkbox:checked + label:before 
+	background: #9FD468
+
+.checkbox:checked + label:after 
+	left: 16px
+
+.checkbox:focus + label:before 
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.2)
 
 
