сделал header под все размеры

--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -4,4 +4,16 @@ body
 .container
     width: 1182px
     margin: auto
+
+@media (max-width: 1200px)
+	.container
+		width: 960px	
+@media (max-width: 960px)
+	.container
+		width: 90%	
+// @media (max-width: 568px)
+// 	.container
+// 		max-width: 300px
+// 		width: 95%	
+
         
