--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,6 +87,18 @@ body {
   margin: auto;
 }
 
+@media (max-width: 1200px) {
+  .container {
+    width: 960px;
+  }
+}
+
+@media (max-width: 960px) {
+  .container {
+    width: 90%;
+  }
+}
+
 .wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,6 +129,10 @@ body {
   bottom: 6px;
   background: rgba(0, 0, 0, 0.5);
   z-index: 2;
+}
+
+.menu-link {
+  display: none;
 }
 
 .nav {
@@ -185,6 +201,112 @@ body {
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+}
+
+.m-menu {
+  width: 27px;
+  height: 27px;
+  background-color: transparent;
+  /* display: flex; */
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: none;
+}
+
+.m-menu .line {
+  width: 100%;
+  height: 1px;
+  background-color: #fff;
+}
+
+@media (max-width: 1200px) {
+  .nav__menu {
+    padding-right: 150px;
+  }
+  .nav__phone {
+    font-size: 25px;
+  }
+  .nav__subtitle {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 960px) {
+  .nav__logo img {
+    width: 60px;
+  }
+  .nav__menu {
+    padding-right: 50px;
+    font-size: 15px;
+  }
+  .nav__phone {
+    font-size: 20px;
+  }
+  .nav__subtitle {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 720px) {
+  .nav__logo img {
+    width: 60px;
+  }
+  .nav__menu {
+    padding-right: 50px;
+    font-size: 15px;
+  }
+  .nav__phone {
+    display: none;
+  }
+  .nav__text {
+    position: relative;
+    z-index: 3;
+  }
+  .nav__subtitle {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 540px) {
+  .m-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    z-index: 3;
+    cursor: pointer;
+  }
+  .head:after {
+    content: '';
+    position: absolute;
+    top: 6px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+  }
+  .nav__logo img {
+    width: 60px;
+  }
+  .nav__menu {
+    display: none;
+  }
+  .nav__phone {
+    display: inline;
+  }
+  .nav__text {
+    z-index: 2;
+  }
+  .nav__subtitle {
+    font-size: 25px;
+  }
+  .nav__title {
+    margin-right: 15px;
+  }
 }
 
 .fl {
