--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -169,12 +169,13 @@
             img
                 width: 60px
         &__menu
-            padding-right: 50px
+            padding-right: 30px
             font-size: 15px
 
         &__phone
             display: none
         &__text
+            margin-right: 25px
             position: relative
             z-index: 3
                 
