--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -175,9 +175,10 @@
         &__phone
             display: none
         &__text
-            margin-right: 25px
-            position: relative
-            z-index: 3
+            // margin-right: 25px
+            // position: relative
+            // z-index: 3
+            display: none
                 
         &__subtitle
             font-size: 25px
