--- a/src/css/style.css
+++ b/src/css/style.css
@@ -263,7 +263,10 @@ body {
     display: none;
   }
   .nav__text {
-    display: none;
+    color: red;
+    margin-right: 44px;
+    position: relative;
+    z-index: 3;
   }
   .nav__subtitle {
     font-size: 25px;
