--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -11,6 +11,11 @@ body
 @media (max-width: 960px)
 	.container
 		width: 90%	
+        
+// @media (max-width: 720px)
+//     .container
+//         width: 90%
+//         margin: auto
 // @media (max-width: 568px)
 // 	.container
 // 		max-width: 300px
