--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -166,6 +166,7 @@
 @media (max-width: 720px)
     .nav
         &__logo 
+            margin-left: 60px
             img
                 width: 60px
         &__menu
@@ -175,13 +176,12 @@
         &__phone
             display: none
         &__text
-            color: red
-            margin-right: 44px
-            position: relative
-            z-index: 3
+            display: none
                 
         &__subtitle
             font-size: 25px
+            margin-left: 60px
+
 
 @media (max-width: 540px)
     .m-menu
@@ -199,6 +199,7 @@
         z-index: 2
     .nav
         &__logo 
+            margin-left: 0px
             img
                 width: 60px
         &__menu
@@ -207,11 +208,11 @@
 
         &__phone
             display: inline
-        &__text
-            z-index: 2
                 
         &__subtitle
             font-size: 25px
+            margin-left: 0
+
         &__title
             margin-right: 15px    
 
