--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -21,4 +21,40 @@
         +reg
 .fl-icon
     margin-left: 10px
-    
+
+
+@media (max-width: 1200px)
+    .fl
+        &__text
+            font-size: 15px
+            line-height: 15px
+            +bold
+        &__sudtitle
+            font-size: 15px
+            line-height: 22px
+            +reg
+        &__title
+            font-size: 15px
+            line-height: 22px
+            +reg
+    .fl-icon
+        margin-left: 10px
+// @media (max-width: 960px)
+// @media (max-width: 720px)
+@media (max-width: 540px)
+    .fl
+        padding: 20px
+        &__text
+            font-size: 15px
+            line-height: 15px
+            +bold
+        &__sudtitle
+            font-size: 15px
+            line-height: 22px
+            +reg
+        &__title
+            font-size: 15px
+            line-height: 22px
+            +reg
+    .fl-icon
+        margin-left: 5px
