--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -43,7 +43,10 @@
 // @media (max-width: 720px)
 @media (max-width: 540px)
     .fl
-        padding: 20px
+        padding-right: 20px
+        width: none
+        margin: auto
+
         &__text
             font-size: 15px
             line-height: 15px
