--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -48,6 +48,7 @@
         margin: auto
 
         &__text
+            color: red
             font-size: 15px
             line-height: 15px
             +bold
