--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -48,15 +48,18 @@
         margin: auto
 
         &__text
-            color: red
+            color: green
             font-size: 15px
             line-height: 15px
+
             +bold
         &__sudtitle
+            padding-right: 150px
             font-size: 15px
             line-height: 22px
             +reg
         &__title
+
             font-size: 15px
             line-height: 22px
             +reg
