--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -43,18 +43,16 @@
 // @media (max-width: 720px)
 @media (max-width: 540px)
     .fl
-        padding-right: 20px
         width: none
-        margin: auto
 
         &__text
-            color: green
+            color: blue
             font-size: 15px
             line-height: 15px
 
             +bold
         &__sudtitle
-            padding-right: 150px
+            margin-right: 130px
             font-size: 15px
             line-height: 22px
             +reg
@@ -65,3 +63,20 @@
             +reg
     .fl-icon
         margin-left: 5px
+@media (max-width: 340px)
+    .fl
+        width: none
+
+        &__text
+            color: blue
+            font-size: 12px
+
+            +bold
+        &__sudtitle
+            margin-right: 200px
+            font-size: 12px
+            +reg
+        &__title
+            font-size: 12px
+            +reg
+
