пятое изменение сортировки

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -380,11 +380,15 @@ body {
 }
 
 @media (max-width: 540px) {
-  .fl {
-    width: none;
+  .fl-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .fl__text {
-    color: blue;
+    color: red;
     font-size: 15px;
     line-height: 15px;
     font-family: 'Montserrat', sans-serif;
@@ -409,11 +413,18 @@ body {
 }
 
 @media (max-width: 340px) {
+  .fl-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
   .fl {
-    width: none;
+    width: 0;
   }
   .fl__text {
-    color: blue;
+    color: red;
     font-size: 12px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
