--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -48,18 +48,17 @@
 
     .fl
         &__text
-            color: red
+            color: green
             font-size: 15px
             line-height: 15px
 
             +bold
         &__sudtitle
-            margin-right: 130px
+            // margin-right: 130px
             font-size: 15px
             line-height: 22px
             +reg
         &__title
-
             font-size: 15px
             line-height: 22px
             +reg
@@ -74,12 +73,12 @@
         width: 0
 
         &__text
-            color: red
+            color: green
             font-size: 12px
 
             +bold
         &__sudtitle
-            margin-right: 200px
+            // margin-right: 200px
             font-size: 12px
             +reg
         &__title
