--- a/src/css/style.css
+++ b/src/css/style.css
@@ -251,6 +251,25 @@ body {
   }
 }
 
+@media (max-width: 750px) {
+  .nav__logo img {
+    width: 60px;
+  }
+  .nav__menu {
+    padding-right: 50px;
+    font-size: 15px;
+  }
+  .nav__phone {
+    display: none;
+  }
+  .nav__text {
+    display: none;
+  }
+  .nav__subtitle {
+    font-size: 25px;
+  }
+}
+
 @media (max-width: 720px) {
   .nav__logo {
     margin-left: 60px;
@@ -387,8 +406,10 @@ body {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
+  .fl {
+    padding-right: 20px;
+  }
   .fl__text {
-    color: green;
     font-size: 15px;
     line-height: 15px;
     font-family: 'Montserrat', sans-serif;
@@ -423,7 +444,6 @@ body {
     width: 0;
   }
   .fl__text {
-    color: green;
     font-size: 12px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
