--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -47,14 +47,13 @@
         flex-wrap: wrap
 
     .fl
+        padding-right: 20px
         &__text
-            color: green
             font-size: 15px
             line-height: 15px
 
             +bold
         &__sudtitle
-            // margin-right: 130px
             font-size: 15px
             line-height: 22px
             +reg
@@ -73,12 +72,10 @@
         width: 0
 
         &__text
-            color: green
             font-size: 12px
 
             +bold
         &__sudtitle
-            // margin-right: 200px
             font-size: 12px
             +reg
         &__title
