--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -162,6 +162,24 @@
             font-size: 20px
         &__subtitle
             font-size: 25px
+@media (max-width: 750px)
+    .nav
+        &__logo 
+            img
+                width: 60px
+        &__menu
+            padding-right: 50px
+            font-size: 15px
+
+        &__phone
+            display: none
+        &__text
+            display: none
+
+        &__subtitle
+            font-size: 25px
+
+
             
 @media (max-width: 720px)
     .nav
@@ -175,6 +193,7 @@
 
         &__phone
             display: none
+
         &__text
             display: none
                 
