Правка сортировки на 340

--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -49,9 +49,9 @@
     .fl
         padding-right: 20px
         &__text
+            color: red
             font-size: 15px
             line-height: 15px
-
             +bold
         &__sudtitle
             font-size: 15px
@@ -67,10 +67,7 @@
     .fl-block
         display: flex
         flex-wrap: wrap
-
     .fl
-        width: 0
-
         &__text
             font-size: 12px
 
