--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -74,6 +74,90 @@
     +bold
     &:hover
         background-color: $color-hov
+
+@media (max-width: 1200px)
+    .cats
+        display: flex
+        align-items: center
+        justify-content: space-between
+        flex-wrap: wrap
+    .catalog
+        position: relative
+        margin-top: 27px
+        color: $color
+        background-color: $color-bg2
+
+    .img img
+
+    .discount    
+        position: absolute
+        top: 34px
+        left: 38px
+        z-index: 3
+        padding: 10px 18px
+        border-radius: 10px
+        background-color: $color-discont
+        color: $color-text
+        font-size: 16px
+
+    .live
+        position: absolute
+        top: 37px
+        right: 35px
+        z-index: 3
+
+
+
+
+    .cont
+        padding: 15px    
+
+    .h2
+        font-size: 24px
+        line-height: 29px
+        padding-top: 29px
+        padding-bottom: 21px
+        +bold
+
+    .h3
+        font-size: 16px
+        line-height: 20px
+        +bold
+    .list
+        display: flex
+        align-items: center
+        justify-content: space-between
+        font-size: 12px
+        line-height: 15px
+        +reg
+
+    .list:before
+        content: ""
+        width: 4px
+        height: 26px
+        background: #6EBBD3
+
+
+    .buttom
+        display: inline-block
+        color: $color-text
+        background-color: $color-buttom
+        width: 380px
+        height: 65px
+        border-radius: 0 0 10px 10px
+        text-align: center
+        padding: 20px
+        font-size: 16px
+        line-height: 20p
+        +bold
+        &:hover
+            background-color: $color-hov
+
+
+// @media (max-width: 960px)
+// @media (max-width: 720px)
+// @media (max-width: 340px)
+
        
 
     /** секция с кнопкое (показать еще)  
