--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
 * {
@@ -410,6 +409,7 @@ body {
     padding-right: 20px;
   }
   .fl__text {
+    color: red;
     font-size: 15px;
     line-height: 15px;
     font-family: 'Montserrat', sans-serif;
@@ -439,9 +439,6 @@ body {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-  }
-  .fl {
-    width: 0;
   }
   .fl__text {
     font-size: 12px;
@@ -556,20 +553,113 @@ body {
   line-height: 20p;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  /** секция с кнопкое (показать еще) */
 }
 
 .buttom:hover {
   background-color: #79d0eb;
 }
 
-.more {
+@media (max-width: 1200px) {
+  .cats {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .catalog {
+    position: relative;
+    margin-top: 27px;
+    color: #000;
+    background-color: #F3F3F3;
+  }
+  .discount {
+    position: absolute;
+    top: 34px;
+    left: 38px;
+    z-index: 3;
+    padding: 10px 18px;
+    border-radius: 10px;
+    background-color: #E62D2D;
+    color: #ffffff;
+    font-size: 16px;
+  }
+  .live {
+    position: absolute;
+    top: 37px;
+    right: 35px;
+    z-index: 3;
+  }
+  .cont {
+    padding: 15px;
+  }
+  .h2 {
+    font-size: 24px;
+    line-height: 29px;
+    padding-top: 29px;
+    padding-bottom: 21px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+  }
+  .h3 {
+    font-size: 16px;
+    line-height: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+  }
+  .list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    font-size: 12px;
+    line-height: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+  }
+  .list:before {
+    content: "";
+    width: 4px;
+    height: 26px;
+    background: #6EBBD3;
+  }
+  .buttom {
+    display: inline-block;
+    color: #ffffff;
+    background-color: #6EBBD3;
+    width: 380px;
+    height: 65px;
+    border-radius: 0 0 10px 10px;
+    text-align: center;
+    padding: 20px;
+    font-size: 16px;
+    line-height: 20p;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+  }
+  .buttom:hover {
+    background-color: #79d0eb;
+  }
+}
+
+*.more {
   text-align: center;
   padding-top: 68px;
   padding-bottom: 83px;
 }
 
-.more__text {
+*.more__text {
   border: 1px solid #CACACA;
   padding: 24px 129px;
   border-radius: 10px;
