правка сортировки для 340px

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -331,6 +331,12 @@ body {
   }
 }
 
+@media (max-width: 340px) {
+  .nav__phone {
+    display: none;
+  }
+}
+
 .fl {
   display: -webkit-box;
   display: -ms-flexbox;
