--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -233,7 +233,12 @@
             margin-left: 0
 
         &__title
-            margin-right: 15px    
+            margin-right: 15px  
+@media (max-width: 340px)
+    .nav
+        &__phone
+            display: none
+                
 
 
                 
