--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -237,8 +237,8 @@
 @media (max-width: 340px)
     .nav
         &__phone
-            display: none
-                
+            font-size: 16px
+
 
 
                 
