правка main под все медия

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -142,12 +142,26 @@
 
 
 @media (max-width: 1200px)
+    .head:after 
+        content: ''
+        position: absolute
+        top: 0
+        left: 0
+        right: 0
+        bottom: 0
+        background: rgba(0,0,0,.5)
+        z-index: 2
+
+    
     .nav
+        margin: 20px
         &__menu
             padding-right: 150px
         &__phone
             font-size: 25px
         &__subtitle
+            margin: 20px
+            margin-bottom: 66px
             font-size: 30px
 @media (max-width: 960px)
     .nav
