--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
 * {
@@ -88,13 +89,13 @@ body {
 
 @media (max-width: 1200px) {
   .container {
-    width: 960px;
+    width: 97%;
   }
 }
 
 @media (max-width: 960px) {
   .container {
-    width: 90%;
+    width: 85%;
   }
 }
 
@@ -223,6 +224,19 @@ body {
 }
 
 @media (max-width: 1200px) {
+  .head:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+  }
+  .nav {
+    margin: 20px;
+  }
   .nav__menu {
     padding-right: 150px;
   }
@@ -230,6 +244,8 @@ body {
     font-size: 25px;
   }
   .nav__subtitle {
+    margin: 20px;
+    margin-bottom: 66px;
     font-size: 30px;
   }
 }
@@ -564,107 +580,38 @@ body {
   background-color: #79d0eb;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 720px) {
   .cats {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .catalog {
-    position: relative;
-    margin-top: 27px;
-    color: #000;
-    background-color: #F3F3F3;
-  }
-  .discount {
-    position: absolute;
-    top: 34px;
-    left: 38px;
-    z-index: 3;
-    padding: 10px 18px;
-    border-radius: 10px;
-    background-color: #E62D2D;
-    color: #ffffff;
-    font-size: 16px;
-  }
-  .live {
-    position: absolute;
-    top: 37px;
-    right: 35px;
-    z-index: 3;
-  }
-  .cont {
-    padding: 15px;
-  }
-  .h2 {
-    font-size: 24px;
-    line-height: 29px;
-    padding-top: 29px;
-    padding-bottom: 21px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-  }
-  .h3 {
-    font-size: 16px;
-    line-height: 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-  }
-  .list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    font-size: 12px;
-    line-height: 15px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-  }
-  .list:before {
-    content: "";
-    width: 4px;
-    height: 26px;
-    background: #6EBBD3;
-  }
-  .buttom {
-    display: inline-block;
-    color: #ffffff;
-    background-color: #6EBBD3;
-    width: 380px;
-    height: 65px;
-    border-radius: 0 0 10px 10px;
-    text-align: center;
-    padding: 20px;
-    font-size: 16px;
-    line-height: 20p;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-  }
-  .buttom:hover {
-    background-color: #79d0eb;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
-*.more {
+@media (max-width: 540px) {
+  .cats {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media (max-width: 340px) {
+  .cats {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  /** секция с кнопкое (показать еще) */
+}
+
+.more {
   text-align: center;
   padding-top: 68px;
   padding-bottom: 83px;
 }
 
-*.more__text {
+.more__text {
   border: 1px solid #CACACA;
   padding: 24px 129px;
   border-radius: 10px;
