--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -7,8 +7,8 @@ body
 
 @media (max-width: 1200px)
 	.container
-		width: 960px	
+		width: 	97%
 @media (max-width: 960px)
 	.container
-		width: 90%	
-        
+		width: 85%	
+// 
