сделал медиа все кроме footer

--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -224,7 +224,7 @@
     .head:after 
         content: ''
         position: absolute
-        top: 6px
+        top: 0
         left: 0
         right: 0
         bottom: 0
@@ -240,7 +240,7 @@
 
 
         &__phone
-            display: inline
+            display: none
                 
         &__subtitle
             font-size: 25px
