--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,7 +319,7 @@ body {
   .head:after {
     content: '';
     position: absolute;
-    top: 6px;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
@@ -336,7 +336,7 @@ body {
     display: none;
   }
   .nav__phone {
-    display: inline;
+    display: none;
   }
   .nav__subtitle {
     font-size: 25px;
@@ -574,45 +574,18 @@ body {
   line-height: 20p;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  /** секция с кнопкое (показать еще) */
 }
 
 .buttom:hover {
   background-color: #79d0eb;
 }
 
-.more {
-  text-align: center;
-  padding-top: 68px;
-  padding-bottom: 83px;
-}
-
-.more__text {
-  border: 1px solid #CACACA;
-  padding: 24px 129px;
-  border-radius: 10px;
-  color: #000;
-}
-
-#scrollTop {
-  float: right;
-  background-color: #6EBBD3;
-  cursor: pointer;
-}
-
-.up-up {
-  position: relative;
-  top: 22px;
-  left: 21px;
-  max-width: 60px;
-  max-height: 60px;
-}
-
-@media (max-width: 720px) {
-  .cats {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+@media (max-width: 960px) {
+  .cats div:nth-child(5) {
+    display: none;
+  }
+  .cats div:nth-child(6) {
+    display: none;
   }
 }
 
@@ -621,6 +594,15 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .cats div:nth-child(5) {
+    display: none;
+  }
+  .cats div:nth-child(6) {
+    display: none;
+  }
+  .cats div:nth-child(4) {
+    display: none;
   }
 }
 
@@ -637,6 +619,70 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .cats div:nth-child(5) {
+    display: none;
+  }
+  .cats div:nth-child(6) {
+    display: none;
+  }
+  .cats div:nth-child(4) {
+    display: none;
+  }
+  .cats div:nth-child(3) {
+    display: none;
+  }
+}
+
+/** секция с кнопкое (показать еще) */
+.more {
+  text-align: center;
+  padding-top: 68px;
+  padding-bottom: 83px;
+}
+
+.more__text {
+  border: 1px solid #CACACA;
+  padding: 24px 129px;
+  border-radius: 10px;
+  color: #000;
+}
+
+.up-up {
+  position: relative;
+  top: 22px;
+  left: 21px;
+  max-width: 60px;
+  max-height: 60px;
+}
+
+#scrollTop {
+  position: relative;
+  float: right;
+  background-color: #6EBBD3;
+  cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+  #scrollTop {
+    bottom: 30px;
+    right: 50px;
+  }
+}
+
+@media (max-width: 540px) {
+  .more__text {
+    padding: 26px 60px;
+  }
+  #scrollTop {
+    bottom: 24px;
+    right: 50px;
+  }
+}
+
+@media (max-width: 340px) {
+  #scrollTop {
+    display: none;
   }
 }
 
