--- a/src/css/style.css
+++ b/src/css/style.css
@@ -793,6 +793,11 @@ body {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
+.error {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
 @media (max-width: 960px) {
   .bl-1 {
     display: none;
@@ -837,4 +842,62 @@ body {
   .check {
     margin-bottom: 30px;
   }
+}
+
+.js-modal {
+  position: fixed;
+  border-radius: 10px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 30;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 10px black;
+          box-shadow: 0 0 10px black;
+  display: none;
+}
+
+.js-title {
+  color: black;
+  font-size: 35px;
+  padding: 20px;
+  text-align: center;
+  text-shadow: 0 0 10px rgba(0, 250, 0, 0.5);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+.js-subtitle {
+  color: black;
+  font-size: 35px;
+  padding: 15px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+
+.modal-closse {
+  position: relative;
+  float: right;
+  top: -200px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  display: none;
+}
+
+.js-overlay {
+  display: block;
+}
+
+.is-show {
+  display: block;
 }
