--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -79,7 +79,8 @@
 
 .checkbox:focus + label:before 
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.2)
-
+.error
+	+bold
 
 @media (max-width: 960px)
 	.footer
