--- a/src/css/style.css
+++ b/src/css/style.css
@@ -851,10 +851,16 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: 700px;
+  min-width: 330px;
   z-index: 30;
   background-color: #fff;
   -webkit-box-shadow: 0 0 10px black;
           box-shadow: 0 0 10px black;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-name: slidein;
+          animation-name: slidein;
   display: none;
 }
 
@@ -869,6 +875,7 @@ body {
 }
 
 .js-subtitle {
+  position: relative;
   color: black;
   font-size: 35px;
   padding: 15px;
@@ -900,4 +907,22 @@ body {
 
 .is-show {
   display: block;
+}
+
+@-webkit-keyframes slidein {
+  from {
+    left: 10%;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slidein {
+  from {
+    left: 10%;
+  }
+  to {
+    left: 50%;
+  }
 }
