--- a/src/css/style.css
+++ b/src/css/style.css
@@ -614,7 +614,7 @@ body {
   }
 }
 
-@media (max-width: 340px) {
+@media (max-width: 320px) {
   .cats {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -680,7 +680,7 @@ body {
   }
 }
 
-@media (max-width: 340px) {
+@media (max-width: 320px) {
   #scrollTop {
     display: none;
   }
@@ -925,4 +925,46 @@ body {
   to {
     left: 50%;
   }
+}
+
+.mobal-menu {
+  position: fixed;
+  border-radius: 5px;
+  top: 20%;
+  left: 40%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 250px;
+  min-width: 250px;
+  z-index: 3;
+  opacity: 0.8;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 10px black;
+          box-shadow: 0 0 10px black;
+  display: none;
+}
+
+.menu-m li a {
+  display: block;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  color: #000;
+}
+
+.menu-m li a__hover:active {
+  color: yellow;
+}
+
+.modal-closs {
+  position: relative;
+  float: right;
+  top: -90px;
+  right: 10px;
+}
+
+.mobal-menu-m {
+  display: block;
 }
