сделал адаптив дзя s e 320

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -428,7 +428,7 @@ body {
         flex-wrap: wrap;
   }
   .fl {
-    padding-right: 20px;
+    padding-right: 25px;
   }
   .fl__text {
     font-size: 15px;
@@ -449,11 +449,11 @@ body {
     font-weight: 400;
   }
   .fl-icon {
-    margin-left: 5px;
+    margin-left: 3px;
   }
 }
 
-@media (max-width: 340px) {
+@media (max-width: 320px) {
   .fl-block {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -468,11 +468,13 @@ body {
   }
   .fl__sudtitle {
     font-size: 12px;
+    padding-left: 5px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
   }
   .fl__title {
     font-size: 12px;
+    padding-left: 3px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
   }
@@ -620,6 +622,15 @@ body {
         -ms-flex-pack: center;
             justify-content: center;
   }
+  .img img {
+    width: 300px;
+  }
+  .cont {
+    width: 300px;
+  }
+  .buttom {
+    width: 300px;
+  }
   .cats div:nth-child(5) {
     display: none;
   }
@@ -682,7 +693,8 @@ body {
 
 @media (max-width: 320px) {
   #scrollTop {
-    display: none;
+    top: 35px;
+    left: 3px;
   }
 }
 
@@ -827,17 +839,23 @@ body {
   }
 }
 
-@media (max-width: 340px) {
+@media (max-width: 320px) {
+  .footer {
+    margin-top: 20px;
+  }
   .bl-2 {
     text-align: center;
     margin: auto;
+    width: 300px;
   }
   .email {
     margin-top: 45px;
+    width: 230px;
   }
   .button {
     margin: 0;
     margin-top: 15px;
+    width: 230px;
   }
   .check {
     margin-bottom: 30px;
