--- a/src/sass/blocks/_block.sass
+++ b/src/sass/blocks/_block.sass
@@ -47,7 +47,7 @@
         flex-wrap: wrap
 
     .fl
-        padding-right: 20px
+        padding-right: 25px
         &__text
             font-size: 15px
             line-height: 15px
@@ -61,8 +61,8 @@
             line-height: 22px
             +reg
     .fl-icon
-        margin-left: 5px
-@media (max-width: 340px)
+        margin-left: 3px
+@media (max-width: 320px)
     .fl-block
         display: flex
         flex-wrap: wrap
@@ -73,8 +73,11 @@
             +bold
         &__sudtitle
             font-size: 12px
+            padding-left: 5px
             +reg
         &__title
             font-size: 12px
+            padding-left: 3px
+
             +reg
 
