--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -100,15 +100,21 @@
 	.button
 		margin: 0
 		margin-top: 15px
-@media (max-width: 340px)
+@media (max-width: 320px)
+	.footer
+		margin-top: 20px
 	.bl-2
 		text-align: center
 		margin: auto
+		width: 300px
 	.email
 		margin-top: 45px
+		width: 230px
 	.button
 		margin: 0
 		margin-top: 15px
+		width: 230px
+
 	.check
 		margin-bottom: 30px	
 
