--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -106,6 +106,12 @@
 @media (max-width: 320px)
     .cats
         justify-content: center
+    .img img
+        width: 300px
+    .cont
+        width: 300px    
+    .buttom
+        width: 300px    
     .cats div:nth-child(5)
         display: none
     .cats div:nth-child(6)
@@ -163,5 +169,10 @@
 
 
 @media (max-width: 320px)
+    .more
+        &__text
+            
     #scrollTop
-        display: none
+        // display: none
+        top: 35px
+        left: 3px
