--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -111,10 +111,13 @@
 		margin-top: 45px
 		width: 230px
 	.button
+
 		margin: 0
 		margin-top: 15px
 		width: 230px
 
 	.check
 		margin-bottom: 30px	
+	.error
+			
 
