--- a/src/sass/blocks/_modal.sass
+++ b/src/sass/blocks/_modal.sass
@@ -61,6 +61,20 @@
   
   to 
     left: 50%
-  
-  
+
+// @media (max-width: 1200px)
+// @media (max-width: 960px)
+// @media (max-width: 720px)
+// @media (max-width: 540px)
+@media (max-width: 340px)
+    .js-modal
+        width: 50px
+    .js-title
+        font-size: 25px
+    .js-subtitle
+        display: none
+    .modal-closse
+        right: 20px
+        top: -5px
+        //   display: none
 
