--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -81,6 +81,10 @@
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.2)
 .error
 	+bold
+.error-r
+	display: none
+
+
 
 @media (max-width: 960px)
 	.footer
@@ -118,6 +122,5 @@
 
 	.check
 		margin-bottom: 30px	
-	.error
 			
 
